<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.misael.pdi_ocr.MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:text="@string/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingTop="80dp" />
        <TextView
            android:text="@string/procesando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingTop="80dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:text="@string/videoButtonText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/videoButton"
            android:background="@color/colorAccent"
            android:textColor="@color/colorText"
            android:textAlignment="textStart"
            android:drawableStart="@android:drawable/ic_media_play"
            android:drawablePadding="10dp"
            android:padding="10dp"/>

        <Button
            android:text="@string/imageButtonText"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:id="@+id/imagenButton"
            android:background="@color/colorSecondary"
            android:textColor="@color/colorText"
            android:drawableStart="@android:drawable/ic_menu_gallery"
            android:drawablePadding="10dp"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>
