<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_text_area"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.misael.pdi_ocr.TextAreaActivity"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center">

    <TextView
        android:text="@string/titleResultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/resultText"
            android:background="@color/colorText"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:onClick="SaveText"
            android:text="@string/buttonSaveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:background="@color/colorAccent"
            android:textColor="@color/colorText"
            android:layout_marginEnd="10dp"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:drawablePadding="10dp"
            android:padding="10dp"/>

        <Button
            android:onClick="searchText"
            android:text="@string/buttonSearchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSearch"
            android:background="@color/colorAccent"
            android:textColor="@color/colorText"
            android:layout_marginStart="10dp"
            android:drawableStart="@android:drawable/ic_menu_search"
            android:drawablePadding="10dp"
            android:padding="10dp"/>
    </LinearLayout>
</LinearLayout>
